# TransferEase

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  abstractlogger_8h_source.html  annotated.html  bytesarray_8h_source.html  classes.html  classtease_1_1_bytes_array-members.html  classtease_1_1_bytes_array.html  classtease_1_1_i_logger-members.html  classtease_1_1_i_logger.html  classtease_1_1_log_context-members.html  classtease_1_1_log_context.html  classtease_1_1_log_manager-members.html  classtease_1_1_log_manager.html  classtease_1_1_request-members.html  classtease_1_1_request.html  classtease_1_1_semver-members.html  classtease_1_1_semver.html  classtease_1_1_transfer_manager-members.html  classtease_1_1_transfer_manager.html  classtease_1_1_url-members.html  classtease_1_1_url.html  dir_3b82b029bdec1de81a88c8a46d04196d.html  dir_3b82b029bdec1de81a88c8a46d04196d_dep.map  dir_3b82b029bdec1de81a88c8a46d04196d_dep.md5  dir_6064c0aac361956721fdad55be907910.html  dir_6064c0aac361956721fdad55be907910_dep.map  dir_6064c0aac361956721fdad55be907910_dep.md5  dir_64106d4f06c06a998ede6d12164613dc.html  dir_64106d4f06c06a998ede6d12164613dc_dep.map  dir_64106d4f06c06a998ede6d12164613dc_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b7de04d02539a2c1dd469ad5b3369d2c.html  dir_b7de04d02539a2c1dd469ad5b3369d2c_dep.map  dir_b7de04d02539a2c1dd469ad5b3369d2c_dep.md5  dir_c647613bd4231a608201612dac91c27a.html  dir_c647613bd4231a608201612dac91c27a_dep.map  (+21 more)
docs/examples/: callback-registration.cpp  requests-download.cpp  transfer-usage.cpp
docs/fragments/: Doxyfile-common.in  Doxyfile-internal.in  Doxyfile-public-api.in
docs/themes/doxygen-awesome/: custom_header.html
include/transferease/: transferease_global.h.in  transfermanager.h
include/transferease/logs/: abstractlogger.h  ilogger.h  logcontext.h
include/transferease/net/: bytesarray.h  request.h  url.h
include/transferease/tools/: enumflag.h
include/transferease/version/: semver.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  (+5 more)
src/: transfermanager.cpp
src/logs/: abstractlogger.cpp  logmanager.cpp
src/net/: bytesarray.cpp  handle.cpp  handle.h  request.cpp  url.cpp
src/tools/: filesystemhelper.cpp  filesystemhelper.h  stringhelper.cpp  stringhelper.h
src/version/: semver.cpp
tests/: CMakeLists.txt  testshelper.cpp  testshelper.h
tests/net/: bytesarray_tests.cpp  url_tests.cpp
tests/tools/: enumflag_tests.cpp
tests/version/: semver_tests.cpp
transferease/: CMakeLists.txt  config.h.in  transferease_global.h  transfermanager.cpp  transfermanager.h
transferease/logs/: ilogger.h  logcontext.h  logmanager.cpp  logmanager.h
transferease/net/: bytesarray.cpp  bytesarray.h  handle.cpp  handle.h  request.cpp  request.h  url.cpp  url.h
transferease/tools/: filesystemhelper.cpp  stringhelper.cpp  stringhelper.h
